objects/YE_ACCT_UPLOADS__c.object
<CustomObject>
    <fields>
        <fullName>Country_Provided__c</fullName>
        <label>Country Provided</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <label>Party ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>YE_ACCT_UPLOADS</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>YE_ACCT_UPLOADS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YE_ACCT_UPLOADS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>